<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/kamtur_background_app"
    tools:context="ui.login.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/forgotPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordDescription"
        android:layout_gravity="center"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:icon="@drawable/ic_send"
        android:text="@string/enviarCorreo">

    </com.google.android.material.button.MaterialButton>

</androidx.appcompat.widget.LinearLayoutCompat>